Updated the navbar to make it stick to the bottom of the page while scrolling. To avoid content on the page from being hidden when scrolling, add a div with the className footer which adds some extra space so content won't be hidden.

--- a/src/App.css
+++ b/src/App.css
@@ -37,13 +37,18 @@
   }
 }
 
+.footer {
+  height: 90px;
+  bottom: 0;
+}
+
 .Navbar {
   overflow: hidden;
-  position: absolute;
+  position: fixed;
   table-layout: fixed;
   display:table;
   width: 100%;
-  height: 76px;
+  height: 56px;
   bottom:0;
 
   background: #555555;
@@ -55,7 +60,7 @@
   color: #ffffff;
   text-decoration: none;
   font-size: 20px;
-  padding-top: 22px;
+  padding-top: 14px;
 }
 
 .Navbar a:first-child {
